syntax = "proto3";
package ebusta.dsl.v1;

option go_package = "ebusta/api/proto/v1;libraryv1";

import "common.proto";

service DslTransformer {
  // ИСПРАВЛЕНИЕ: Используем DslRequest вместо RawInput
  rpc Transform (DslRequest) returns (SQuery) {}
}

// ИСПРАВЛЕНИЕ: Переименовали сообщение, чтобы не конфликтовать с library.proto
message DslRequest {
  string query = 1;
}

message SQuery {
  string data = 1;
  bool is_success = 2;
  string error_msg = 3;
  ebusta.library.v1.SearchQuery ast = 4;
}
