package main

import (
	"context"
	"log"
	"net"

	libraryv1 "ebusta/api/proto/v1"
	"ebusta/internal/config"

	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
)

type orchestratorServer struct {
	libraryv1.UnimplementedOrchestratorServiceServer
	dslClient libraryv1.DslTransformerClient
	qbClient  libraryv1.QueryBuilderClient
	dmClient  libraryv1.StorageServiceClient
}

func (s *orchestratorServer) Search(ctx context.Context, req *libraryv1.SearchRequest) (*libraryv1.SearchResponse, error) {
	log.Printf("üéº Search request: %s", req.GetQuery())

	// 1. –ü–æ—Ö–æ–¥ –≤ Scala DSL (–¢—Ä–∞–Ω—Å—Ñ–æ—Ä–º–∞—Ü–∏—è —Å—Ç—Ä–æ–∫–∏ –≤ AST)
	dslResp, err := s.dslClient.Transform(ctx, &libraryv1.DslRequest{
		Query: req.GetQuery(),
	})
	if err != nil {
		log.Printf("‚ùå DSL Error: %v", err)
		return nil, err
	}

	// 2. –ü–æ—Ö–æ–¥ –≤ Query Builder (–ì–µ–Ω–µ—Ä–∞—Ü–∏—è JSON –¥–ª—è OpenSearch)
	qbResp, err := s.qbClient.Build(ctx, &libraryv1.BuildRequest{
		Ast:  dslResp.GetAst(),
		Size: req.GetLimit(),
	})
	if err != nil {
		log.Printf("‚ùå QueryBuilder Error: %v", err)
		return nil, err
	}

	// 3. –ü–æ—Ö–æ–¥ –≤ DataManager —Å –≥–æ—Ç–æ–≤—ã–º JSON –∑–∞–ø—Ä–æ—Å–æ–º
	return s.dmClient.SearchBooks(ctx, &libraryv1.SearchRequest{
		Query:               req.GetQuery(),
		Ast:                 dslResp.GetAst(),
		Limit:               req.GetLimit(),
		DebugOpenSearchJson: qbResp.GetBodyJson(), // –ò—Å–ø—Ä–∞–≤–ª–µ–Ω–æ: GetBodyJson –≤–º–µ—Å—Ç–æ GetJsonQuery
	})
}

func main() {
	cfg := config.Get()

	// –ö–æ–Ω–Ω–µ–∫—Ç—ã –∫ —Å–µ—Ä–≤–∏—Å–∞–º —á–µ—Ä–µ–∑ –Ω–æ–≤—ã–π –∫–æ–Ω—Ñ–∏–≥ 
	dslConn, _ := grpc.Dial(cfg.DslScala.Address(), grpc.WithTransportCredentials(insecure.NewCredentials()))
	qbConn, _ := grpc.Dial(cfg.QueryBuilder.Address(), grpc.WithTransportCredentials(insecure.NewCredentials()))
	dmConn, _ := grpc.Dial(cfg.Datamanager.Address(), grpc.WithTransportCredentials(insecure.NewCredentials()))

	lis, err := net.Listen("tcp", cfg.Orchestrator.Address())
	if err != nil {
		log.Fatalf("failed to listen: %v", err)
	}

	s := grpc.NewServer()
	libraryv1.RegisterOrchestratorServiceServer(s, &orchestratorServer{
		dslClient: libraryv1.NewDslTransformerClient(dslConn),
		qbClient:  libraryv1.NewQueryBuilderClient(qbConn),
		dmClient:  libraryv1.NewStorageServiceClient(dmConn),
	})

	log.Printf("üöÄ Orchestrator (Full Chain) started on %s", cfg.Orchestrator.Address())
	if err := s.Serve(lis); err != nil {
		log.Fatalf("failed to serve: %v", err)
	}
}
